--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.29.4",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4"
